updating custom css with border shadow

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -45,6 +45,10 @@
 
 /* border of twitter box */
 
-.twitter-timeline{ 
-  box-shadow: 6px 6px 13px -8px rgba(74,74,74,1)
+.twitter-timeline{
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.37);
+}
+
+.motto{
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.37);
 }
