Fix section Publication
* Use tag "Preferred" to select publication to show in the home page
* Change list format for Publication page
* Add example publication
* Change the link to archive page in layouts/partials/widgets/pages.html to avoid creating new filtered list

--- a/layouts/partials/widgets/pages.html
+++ b/layouts/partials/widgets/pages.html
@@ -15,6 +15,7 @@
 
 {{/* Query */}}
 {{ $query := where site.RegularPages "Type" $items_type }}
+{{ $see_all_page := site.GetPage "Section" $items_type }}    {{/* Chenges here */}}
 {{ $archive_page := site.GetPage "Section" $items_type }}
 
 {{/* Filters */}}
@@ -72,7 +73,7 @@
     
     {{ if gt $count $items_count }}
     <div class="see-all">
-      <a href="{{ $archive_page.RelPermalink }}">
+      <a href="{{ $see_all_page.RelPermalink }}">    {{/* Chenges here*/}}
         {{ i18n $i18n | default "See all" }}
         <i class="fas fa-angle-right"></i>
       </a>
