--- a/layouts/section/talk_poster.html
+++ b/layouts/section/talk_poster.html
@@ -10,30 +10,78 @@
       <div class="article-style">{{ . }}</div>
       {{ end }}
 
-      {{ range .Data.Pages.GroupByDate "2006" }}
-      <div class="row" id="talk_list">
-        <div class="col-lg-2">
-          <h3>{{ .Key }}</h3>
-        </div>
-        <div class="col-lg-10">
-
-          {{ range .Pages }}
-            {{ if eq $.Params.view 1 }}
-              {{ partial "li_list" . }}
-            {{ else if eq $.Params.view 3 }}
-              {{ partial "li_card" . }}
-            {{ else }}
-              {{ partial "li_compact" . }}
-            {{ end }}
-          {{ end }}
-
-        </div>
-      </div>
+      {{/* Array of distinct years. */}}
+      {{ range .Pages.ByDate.Reverse }}
+        {{ $year := print (.Date.Format "2006") }}
+        {{ $.Scratch.SetInMap "years" $year $year }}
       {{ end }}
+
+      <div class="form-row mb-4">
+        <div class="col-auto">
+          <input type="search" class="filter-search" placeholder="{{ i18n "search_placeholder" }}" autocapitalize="off"
+          autocomplete="off" autocorrect="off" role="textbox" spellcheck="false">
+        </div>
+        <div class="col-auto">
+          <select class="pub-filters pubtype-select form-control form-control-sm" data-filter-group="pubtype">
+            <option value="*">{{ i18n "talk_poster_type" }}</option>
+            {{ $talk_poster := partial "functions/get_talk_poster" $ }}
+            {{ range $index, $taxonomy := site.Taxonomies.talk_poster_types }}
+            <option value=".pubtype-{{ (int $index) }}">
+              {{ index $talk_poster (int $index) }}
+            </option>
+            {{ end }}
+          </select>
+        </div>
+        <!-- Remove selection by year 
+        <div class="col-auto">
+          <select class="pub-filters form-control form-control-sm" data-filter-group="year">
+            <option value="*">{{ i18n "date" }}</option>
+            {{ $years_sorted := $.Scratch.GetSortedMapValues "years" }}
+            {{ if $years_sorted }}
+            {{ range $year := sort $years_sorted "" "desc" }}
+            <option value=".year-{{ $year }}">
+              {{ $year }}
+            </option>
+            {{ end }}
+            {{ end }}
+          </select>
+        </div>
+        -->
+      </div>
+
+      <div class= "row" id="container-publications">
+        {{ range .Pages.ByDate.Reverse }}
+
+        {{ if .Params.talk_poster_types }}
+          {{ $.Scratch.Set "pubtype" (index .Params.talk_poster_types 0) }}
+        {{ else }}
+          {{ $.Scratch.Set "pubtype" 0 }}
+        {{ end }}
+        
+      
+        <div class="grid-sizer col-lg-12 isotope-item pubtype-{{ $.Scratch.Get "pubtype" }} year-{{ .Date.Format "2006" }}">
+          <div class="row">
+            <div class="col-lg-2">
+              <h3>{{ .Date.Format "2006" }}</h3>
+            </div>
+            <div class="col-lg-10">
+              {{ if eq $.Params.view 1 }}
+                {{ partial "li_list" . }}
+              {{ else if eq $.Params.view 3 }}
+                {{ partial "li_card" . }}
+              {{ else if eq $.Params.view 4 }}
+                {{ partial "li_citation" . }}
+              {{ else }}
+                {{ partial "li_compact" . }}
+              {{ end }}
+            </div>
+          </div>
+        </div>
+        {{ end }}
+      </div>
 
     </div>
   </div>
-
 </div>
 
 {{- end -}}
